--- a/styles.css
+++ b/styles.css
@@ -161,3 +161,12 @@ body {
 .favourite-song-list:hover {
   transform: translateY(-5px);
 }
+
+.music-player {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: none;
+  z-index: 1;
+}
